Inventory management system

--- a/BookInventoryManagement/appsettings.json
+++ b/BookInventoryManagement/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "dbConnection": "Data Source=LAPTOP-6DS8N5E0;Initial Catalog=BookInventory;Integrated Security=true;"
+  }
 }
